<resources>
    <string name="app_name">CustomKeyBoard</string>

    <string name="label_CANCEL">ESC</string>
    <string name="label_DONE">确定</string>
    <integer name="label_"> </integer>
    <string name="label_star">*</string>
    <string name="label_.">.</string>

    <integer name="code_CANCEL">-3</integer>
    <integer name="code_DONE">-4</integer>
    <integer name="code_Delete">-5</integer>
    <integer name="code_">0x20</integer>
    <integer name="code_star">0x2A</integer>
    <integer name="code_.">0x2E</integer>

    <string name="label_0">0</string>
    <string name="label_1">1</string>
    <string name="label_2">2</string>
    <string name="label_3">3</string>
    <string name="label_4">4</string>
    <string name="label_5">5</string>
    <string name="label_6">6</string>
    <string name="label_7">7</string>
    <string name="label_8">8</string>
    <string name="label_9">9</string>

    <string name="label_A">A</string>
    <string name="label_B">B</string>
    <string name="label_C">C</string>
    <string name="label_D">D</string>
    <string name="label_E">E</string>
    <string name="label_F">F</string>
    <string name="label_G">G</string>
    <string name="label_H">H</string>
    <string name="label_I">I</string>
    <string name="label_J">J</string>
    <string name="label_K">K</string>
    <string name="label_L">L</string>
    <string name="label_M">M</string>
    <string name="label_N">N</string>
    <string name="label_O">O</string>
    <string name="label_P">P</string>
    <string name="label_Q">Q</string>
    <string name="label_R">R</string>
    <string name="label_S">S</string>
    <string name="label_T">T</string>
    <string name="label_U">U</string>
    <string name="label_V">V</string>
    <string name="label_W">W</string>
    <string name="label_X">X</string>
    <string name="label_Y">Y</string>
    <string name="label_Z">Z</string>

    <integer name="code_0">0x30</integer>
    <integer name="code_1">0x31</integer>
    <integer name="code_2">0x32</integer>
    <integer name="code_3">0x33</integer>
    <integer name="code_4">0x34</integer>
    <integer name="code_5">0x35</integer>
    <integer name="code_6">0x36</integer>
    <integer name="code_7">0x37</integer>
    <integer name="code_8">0x38</integer>
    <integer name="code_9">0x39</integer>

    <integer name="code_A">0x41</integer>
    <integer name="code_B">0x42</integer>
    <integer name="code_C">0x43</integer>
    <integer name="code_D">0x44</integer>
    <integer name="code_E">0x45</integer>
    <integer name="code_F">0x46</integer>
    <integer name="code_G">0x47</integer>
    <integer name="code_H">0x48</integer>
    <integer name="code_I">0x49</integer>
    <integer name="code_J">0x4a</integer>
    <integer name="code_K">0x4b</integer>
    <integer name="code_L">0x4c</integer>
    <integer name="code_M">0x4d</integer>
    <integer name="code_N">0x4e</integer>
    <integer name="code_O">0x4f</integer>
    <integer name="code_P">0x50</integer>
    <integer name="code_Q">0x51</integer>
    <integer name="code_R">0x52</integer>
    <integer name="code_S">0x53</integer>
    <integer name="code_T">0x54</integer>
    <integer name="code_U">0x55</integer>
    <integer name="code_V">0x56</integer>
    <integer name="code_W">0x57</integer>
    <integer name="code_X">0x58</integer>
    <integer name="code_Y">0x59</integer>
    <integer name="code_Z">0x5a</integer>

    <string name="label_云">云</string>
    <string name="label_京">京</string>
    <string name="label_冀">冀</string>
    <string name="label_军">军</string>
    <string name="label_吉">吉</string>
    <string name="label_宁">宁</string>
    <string name="label_川">川</string>
    <string name="label_挂">挂</string>
    <string name="label_新">新</string>
    <string name="label_晋">晋</string>
    <string name="label_桂">桂</string>
    <string name="label_沪">沪</string>
    <string name="label_津">津</string>
    <string name="label_浙">浙</string>
    <string name="label_渝">渝</string>
    <string name="label_湘">湘</string>
    <string name="label_琼">琼</string>
    <string name="label_甘">甘</string>
    <string name="label_皖">皖</string>
    <string name="label_空">空</string>
    <string name="label_粤">粤</string>
    <string name="label_苏">苏</string>
    <string name="label_蒙">蒙</string>
    <string name="label_藏">藏</string>
    <string name="label_豫">豫</string>
    <string name="label_贵">贵</string>
    <string name="label_赣">赣</string>
    <string name="label_辽">辽</string>
    <string name="label_鄂">鄂</string>
    <string name="label_闽">闽</string>
    <string name="label_陕">陕</string>
    <string name="label_青">青</string>
    <string name="label_鲁">鲁</string>
    <string name="label_黑">黑</string>

    <integer name="code_云">0x4e91</integer>
    <integer name="code_京">0x4eac</integer>
    <integer name="code_冀">0x5180</integer>
    <integer name="code_军">0x519b</integer>
    <integer name="code_吉">0x5409</integer>
    <integer name="code_宁">0x5b81</integer>
    <integer name="code_川">0x5ddd</integer>
    <integer name="code_挂">0x6302</integer>
    <integer name="code_新">0x65b0</integer>
    <integer name="code_晋">0x664b</integer>
    <integer name="code_桂">0x6842</integer>
    <integer name="code_沪">0x6caa</integer>
    <integer name="code_津">0x6d25</integer>
    <integer name="code_浙">0x6d59</integer>
    <integer name="code_渝">0x6e1d</integer>
    <integer name="code_湘">0x6e58</integer>
    <integer name="code_琼">0x743c</integer>
    <integer name="code_甘">0x7518</integer>
    <integer name="code_皖">0x7696</integer>
    <integer name="code_空">0x7a7a</integer>
    <integer name="code_粤">0x7ca4</integer>
    <integer name="code_苏">0x82cf</integer>
    <integer name="code_蒙">0x8499</integer>
    <integer name="code_藏">0x85cf</integer>
    <integer name="code_豫">0x8c6b</integer>
    <integer name="code_贵">0x8d35</integer>
    <integer name="code_赣">0x8d63</integer>
    <integer name="code_辽">0x8fbd</integer>
    <integer name="code_鄂">0x9102</integer>
    <integer name="code_闽">0x95fd</integer>
    <integer name="code_陕">0x9655</integer>
    <integer name="code_青">0x9752</integer>
    <integer name="code_鲁">0x9c81</integer>
    <integer name="code_黑">0x9ed1</integer>

</resources>
