<?xml version="1.0" encoding="utf-8"?><Keyboard xmlns:android="http://schemas.android.com/apk/res/android"    android:horizontalGap="0dp"    android:keyWidth="10%p"    android:keyHeight="10%p"    android:verticalGap="0dp">    <Row>        <Key            android:codes="@integer/code_1"            android:keyEdgeFlags="left"            android:keyLabel="@string/label_1" />        <Key            android:codes="@integer/code_2"            android:keyLabel="@string/label_2" />        <Key            android:codes="@integer/code_3"            android:keyLabel="@string/label_3" />        <Key            android:codes="@integer/code_ESC"            android:keyHeight="20%p"            android:keyEdgeFlags="right"            android:keyLabel="@string/label_ESC" />    </Row>    <Row>        <Key            android:codes="@integer/code_4"            android:keyEdgeFlags="left"            android:keyLabel="@string/label_4" />        <Key            android:codes="@integer/code_5"            android:keyLabel="@string/label_5" />        <Key            android:codes="@integer/code_6"            android:keyLabel="@string/label_6" />    </Row>    <Row>        <Key            android:codes="@integer/code_7"            android:keyEdgeFlags="left"            android:keyLabel="@string/label_7" />        <Key            android:codes="@integer/code_8"            android:keyLabel="@string/label_8" />        <Key            android:codes="@integer/code_9"            android:keyLabel="@string/label_9" />        <Key            android:codes="@integer/code_OK"            android:keyHeight="20%p"            android:keyEdgeFlags="right"            android:keyLabel="@string/label_OK" />    </Row>    <Row>        <Key            android:codes="@integer/code_X"            android:keyEdgeFlags="left"            android:keyLabel="@string/label_X" />        <Key            android:codes="@integer/code_0"            android:keyLabel="@string/label_0" />        <Key            android:codes="@integer/code_Delete"            android:isRepeatable="true"            android:keyIcon="@drawable/icon_key_delete" />    </Row></Keyboard>